# Benchmark-Tests

./: Makefile  README.md  benchmark_results.md  benchmark_results.txt  pyproject.toml
src/: data_converter.py  list_creating.py  main.py  string_concatenator.py
tests/: test_data_converter.py  test_list_creating.py  test_main.py  test_string_concatenator.py
