[tool.poetry]
name = "backend-academy-2024-python-template"
version = "0.1.0"
description = ""
package-mode = false
authors = ["n.beskodarov <n.beskodarov@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.0"
msgpack = "^1.1.0"


[tool.poetry.dev-dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.1"
pytest = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
pytest-repeat = "*"
pytest-asyncio = "*"

[tool.poetry.group.dev.dependencies]
pytest-benchmark = {extras = ["histogram"], version = "^5.1.0"}
mypy = "^1.13.0"

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"D203",  # несовместимо с другими линтами
"D212",  # делает докстринги некрасивыми, на мой взгляд
"COM812",  # может конфликтовать с форматировщиком
"ISC001",  # может конфликтовать с форматировщиком
"RUF002",  # кириллица в докстрингах
"D100", # отсутствие докстринг в начале файла 
"C416",  # чтобы ruff не ругался на list comprehensions
"PERF402", # чтобы ruff не ругался на append
"S301", # чтобы ruff не ругался на небезопасную десериализацию при помощи pickle
"D104", # отсутствие докстрингов в папках
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
"S101", # использование assert
"ANN201",# отсутствие аннтации в тестах
"S311", # чтобы ruff не ругался на random
]  

 
